--- a/progAssignment.ipynb
+++ b/progAssignment.ipynb
@@ -42,22 +42,10 @@
     "  tf.keras.layers.Conv2D(16, (5,5), activation=\"relu\"),\n",
     "  tf.keras.layers.AveragePooling2D((2,2), strides=(2,2)),\n",
     "  tf.keras.layers.Flatten(),\n",
-    "  tf.keras.layers.Dense(120, activation=\"relu\"),\n",
-    "  tf.keras.layers.Dense(84, activation=\"relu\"),\n",
-    "  tf.keras.layers.Dense(10, activation=\"softmax\")\n",
+    "  tf.keras.layers.Dense(120),\n",
+    "  tf.keras.layers.Dense(84),\n",
+    "  tf.keras.layers.Dense(10)\n",
     "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mnist = tf.keras.datasets.mnist\n",
-    "\n",
-    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
-    "x_train, x_test = x_train / 255.0, x_test / 255.0"
    ]
   },
   {
@@ -68,8 +56,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.09951755, 0.09883981, 0.09829108, 0.10308765, 0.09896996,\n",
-       "        0.10039465, 0.09815952, 0.09874943, 0.0993045 , 0.10468588]],\n",
+       "array([[-0.23943901,  0.14800096,  0.10634484,  0.03481921,  0.00162916,\n",
+       "        -0.04375244,  0.06225597,  0.1351379 , -0.08489074, -0.01026402]],\n",
        "      dtype=float32)"
       ]
      },
@@ -91,8 +79,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.09995156, 0.09988383, 0.09982905, 0.10030903, 0.09989684,\n",
-       "        0.10003926, 0.09981591, 0.09987481, 0.09993026, 0.10046948]],\n",
+       "array([[0.07738844, 0.11400899, 0.10935738, 0.1018087 , 0.09848513,\n",
+       "        0.0941156 , 0.10464068, 0.11255187, 0.09032241, 0.09732076]],\n",
        "      dtype=float32)"
       ]
      },
@@ -109,28 +97,6 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.09995156, 0.09988383, 0.09982905, 0.10030903, 0.09989684,\n",
-       "        0.10003926, 0.09981591, 0.09987481, 0.09993026, 0.10046948]],\n",
-       "      dtype=float32)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.nn.softmax(predictions).numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [],
    "source": [
     "loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)"
@@ -138,16 +104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.3021927"
+       "2.3632312"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,13 +124,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "model.compile(optimizer='adam',\n",
     "              loss=loss_fn,\n",
     "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1875/1875 [==============================] - 10s 4ms/step - loss: 0.2030 - accuracy: 0.9401\n",
+      "Epoch 2/5\n",
+      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0780 - accuracy: 0.9759\n",
+      "Epoch 3/5\n",
+      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0610 - accuracy: 0.9815\n",
+      "Epoch 4/5\n",
+      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0501 - accuracy: 0.9845\n",
+      "Epoch 5/5\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0449 - accuracy: 0.9859\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x142030e4130>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x_train, y_train, epochs=5)"
    ]
   },
   {
@@ -176,66 +178,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Mark Andrey Rubio\\miniconda3\\envs\\tf\\lib\\site-packages\\keras\\backend.py:5582: UserWarning: \"`sparse_categorical_crossentropy` received `from_logits=True`, but the `output` argument was produced by a Softmax activation and thus does not represent logits. Was this intended?\n",
-      "  output, from_logits = _get_logits(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1875/1875 [==============================] - 7s 3ms/step - loss: 0.2353 - accuracy: 0.9273\n",
-      "Epoch 2/5\n",
-      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0779 - accuracy: 0.9752\n",
-      "Epoch 3/5\n",
-      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0573 - accuracy: 0.9814\n",
-      "Epoch 4/5\n",
-      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0455 - accuracy: 0.9860\n",
-      "Epoch 5/5\n",
-      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0370 - accuracy: 0.9881\n"
+      "313/313 - 1s - loss: 0.0390 - accuracy: 0.9882 - 1s/epoch - 3ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x24cdd4e50d0>"
+       "[0.039025068283081055, 0.9882000088691711]"
       ]
      },
      "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.fit(x_train, y_train, epochs=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "313/313 - 1s - loss: 0.0381 - accuracy: 0.9876 - 1s/epoch - 4ms/step\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[0.03812792897224426, 0.9876000285148621]"
-      ]
-     },
-     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
